--- a/manifest.json
+++ b/manifest.json
@@ -7,17 +7,19 @@
     "identity",
     "tabs",
     "background",
+    "notifications",
     "storage",
     "*://*.google.com/*",
     "*://*.spotify.com/*"
   ],
   "background": {
-    "scripts": ["base64.js",
+    "scripts": [
     "jquery.js",
-    "google-api-client.js",  
-    "background.js",
-    "spotify-web-api.js",
-    "main.js"
+    // "base64.js",
+    // "google-api-client.js", 
+    "spotify-web-api.js", 
+    "background.js"
+    // "main.js"
     ]
   },
     "browser_action" : {
@@ -32,7 +34,7 @@
   "oauth2": {
     "client_id": "166859819073-rv7t4945r8toh7ek9ab99enelke8mtbb.apps.googleusercontent.com",
     "scopes": [
-      "https://www.googleapis.com/auth/gmail.modify"
+      "https://www.googleapis.com/auth/gmail.readonly"
     ]
   }
 }
